# biocomp-cb396-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cb396/: __init__.py  blastdb.py  cli.py  cnn.py  config.py  dataset.py  features.py  pssm.py  train.py
tests/: test_pipeline.py
