[project]
name = "biocomp-cb396-prediction"
version = "0.1.0"
description = "Predição de estrutura secundária (Q3) no dataset CB396 com PSSM — modelos SVM e CNN/BiLSTM/CRF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.6,<1.7",
    "biopython>=1.83",
    "joblib>=1.3",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
cnn = ["torch>=2.2"]

[project.scripts]
cb396 = "cb396.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cb396"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
